Rabbitmq and bigquery (#29)
* Wait for command to finish in insta-integration

* Add in postgres url for insta-integration

* Keep consistent x-api-token across app and api

* Keep consistent x-api-token across app and api

* Fix bug when validation is defined for generated sub-data source from metadata

* Allow for empty sequences for per field count, unpersist to avoid OOM, add in rabbitmq and bigquery as data sources, introduce oneOfWeighted for generation

* Update to use java 21 for build

* Update to use java 21 for build

* Update to use Java 17 across all modules and libraries, update to Gradle 8.12, update to JUnit5

* Add java options to insta-integration run

* Add in API user and token to command directly